--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -424,6 +424,10 @@ footer {
 		height: 1100px;
 		display: block;
 	}
+    #video .container {
+        width: 70%;
+        margin: auto;
+    }
 	#video iframe {
 		margin-top: 30px;
 		width: 100%
