Add style to video section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -426,11 +426,24 @@ footer {
 	#video {
 		height: 1100px;
 		display: block;
-	}
-  
+	}  
+	/*
 	#video iframe {
 		margin-top: 30px;
 		width: 100%
+	}*/
+	.wrap {
+		position: relative;
+		width: 100%;
+		height: 0;
+		padding-bottom: 56.25%;
+	}
+	.video {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
 	}
 	.right-photos-text {
 		width: 88%;
