--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,9 @@
 	padding: 0;
 	border: none;
 }
+html{
+	scroll-behavior: smooth;
+	}
 body {
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 300;
