--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,6 +230,19 @@ hr {
 .left-video {
 	width: 100%;
 }
+.wrap {
+	position: relative;
+	width: 100%;
+	height: 0;
+	padding-bottom: 56.25%;
+}
+.video {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
 .right-text {
 	padding: 45px;
 	box-sizing: border-box;
@@ -390,10 +403,11 @@ footer {
 		padding: 0;
 		width: 100%;
 	}
-	.right-text {
-		left: 0;
-		padding: 25px;
-	}
+	#video .container {
+		width: 90%;
+		margin: auto;
+		display: block;
+	  }
 	.right-text h2 {
 		line-height: 45px;
 	}
@@ -405,6 +419,9 @@ footer {
 	.right-about-heading {
 		height: 250px;
 		margin-bottom: 25px;
+	}
+	#about {
+		width: 90%;
 	}
 	#left-about {
 		padding-top: 30px;
@@ -430,23 +447,8 @@ footer {
 		height: 1100px;
 		display: block;
 	}  
-	/*
 	#video iframe {
-		margin-top: 30px;
 		width: 100%
-	}*/
-	.wrap {
-		position: relative;
-		width: 100%;
-		height: 0;
-		padding-bottom: 56.25%;
-	}
-	.video {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
 	}
 	.right-photos-text {
 		width: 88%;
