Add changes to about section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -456,7 +456,7 @@ footer {
 		display: block;
 	}  
 	#video iframe {
-		width: 100%
+		width: 100%;
 		margin-top: 15px;
 	}
 	.right-photos-text {
