Add changes to media queries video section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -425,6 +425,8 @@ footer {
 		box-sizing: border-box;
 		padding: 30px;
     	text-align: left;
+		padding-right: 6%;
+    	padding-left: 1%;
 	}
 	.left-video {
 		padding: 0;
